cloudformation/cfn.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"blottr",
  "Parameters":{
    "KeyName":{
      "Description":"The EC2 Key Pair to allow SSH access to the instance",
      "Type":"String",
      "Default":"composer-team"
    },
    "Stage":{
      "Description":"Environment name",
      "Type":"String",
      "AllowedValues":[ "PROD", "CODE"],
      "Default": "PROD"
    },
    "VpcId": {
      "Description": "ID of the VPC onto which to launch the application eg. vpc-1234abcd",
      "Type": "AWS::EC2::VPC::Id",
      "Default": "vpc-381fa95d"
    },
    "PublicVpcSubnets": {
      "Description": "Subnets to use in VPC for public internet-facing ELB eg. subnet-abcd1234",
      "Type": "List<AWS::EC2::Subnet::Id>",
      "Default": "subnet-c3620fa6,subnet-2b37bd5c,subnet-3667c86f"
    },
    "PrivateVpcSubnets": {
      "Description": "Subnets to use in VPC for private EC2 instances eg. subnet-abcd1234",
      "Type": "List<AWS::EC2::Subnet::Id>",
      "Default": "subnet-c2620fa7,subnet-2a37bd5d,subnet-2967c870"
    },
    "MachineImagesAMI": {
      "Description": "AMI id from the machine-images repo",
      "Type": "AWS::EC2::Image::Id"
    },
    "GuardianIP": {
      "Description": "Ip range for the office",
      "Type": "String",
      "Default": "77.91.248.0/21"
    }
  },
  "Mappings": {
    "SSLCertificateId": {
      "Environment": {
        "CODE": "arn:aws:iam::743583969668:server-certificate/sites.code.dev-gutools.co.uk-exp2023-08-15",
        "PROD": "arn:aws:iam::743583969668:server-certificate/star.gutools.co.uk-exp2018-11-17"
      }
    }
  },

  "Resources":{

    "BlottrRole": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [ {
            "Effect": "Allow",
            "Principal": {
              "Service": [ "ec2.amazonaws.com" ]
            },
            "Action": [ "sts:AssumeRole" ]
          } ]
        },
        "Path": "/"
      }
    },

    "BlottrDescribeEC2Policy" : {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "BlottrDescribeEC2Policy",
        "PolicyDocument": {
          "Statement": [ {
            "Action": ["EC2:Describe*"],
            "Effect": "Allow",
            "Resource":"*"
          }]
        },
        "Roles": [ { "Ref": "BlottrRole" } ]
      }
    },

    "PanDomainPolicy": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "PanDomainPolicy",
        "PolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Action": ["s3:GetObject"],
              "Resource": ["arn:aws:s3:::pan-domain-auth-settings/*"]
            }
          ]
        },
        "Roles": [{"Ref": "BlottrRole"}]
      }
    },

    "BlottrGetDistributablesPolicy" : {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "BlottrGetDistributablesPolicy",
        "PolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Action": [ "s3:GetObject" ],
              "Resource": [ "arn:aws:s3:::composer-dist/*" ]
            }
          ]
        },
        "Roles": [ { "Ref": "BlottrRole" } ]
      }
    },

    "BlottrDynamoPolicy" : {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyName": "BlottrDynamoPolicy",
        "PolicyDocument": {
          "Statement": [
            {
              "Effect": "Allow",
              "Action": [ "dynamodb:*" ],
              "Resource": "*"
            }
          ]
        },
        "Roles": [ { "Ref": "BlottrRole" } ]
      }
    },

    "BlottrInstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [ {"Ref": "BlottrRole"} ]
      }
    },

    "SSHSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH access from the office",
        "VpcId": { "Ref": "VpcId" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "AppServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "blottr Application servers",
        "VpcId": { "Ref": "VpcId" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 9000,
            "ToPort": 9000,
            "CidrIp": {"Ref": "GuardianIP"}
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 9000,
            "ToPort": 9000,
            "SourceSecurityGroupId": { "Ref": "LoadBalancerSecurityGroup" }
          }
        ]
      }
    },

    "LoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "blottr application load balancer",
        "VpcId": { "Ref": "VpcId" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },

    "BlottrLoadBalancer" : {
      "Type" : "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties" : {
        "SecurityGroups": [{ "Fn::GetAtt": ["LoadBalancerSecurityGroup", "GroupId"] }],
        "CrossZone": true,
        "Subnets": { "Ref": "PublicVpcSubnets" },
        "Listeners" : [ {
          "LoadBalancerPort" : "80",
          "InstancePort" : "9000",
          "Protocol" : "HTTP"
        },{
          "LoadBalancerPort": "443",
          "InstancePort": "9000",
          "Protocol": "HTTPS",
          "SSLCertificateId": {
            "Fn::FindInMap": [
              "SSLCertificateId",
              "Environment",
              {"Ref": "Stage"}
            ]
          }
        }],

        "HealthCheck" : {
          "Target" : "HTTP:9000/management/healthcheck",
          "HealthyThreshold" : "2",
          "UnhealthyThreshold" : "2",
          "Interval" : "10",
          "Timeout" : "5"
        },
        "Tags":[
          {
            "Key":"Stage",
            "Value":{
              "Ref":"Stage"
            }
          },
          {
            "Key": "Stack",
            "Value": "flexible"
          },
          {
            "Key":"App",
            "Value":"blottr"
          }
        ]
      }
    },


    "AutoscalingGroup":{
      "Type":"AWS::AutoScaling::AutoScalingGroup",
      "Properties":{
        "AvailabilityZones": { "Fn::GetAZs": "" },
        "VPCZoneIdentifier": { "Ref": "PrivateVpcSubnets" },
        "LaunchConfigurationName":{ "Ref":"BlottrLaunchConfig" },
        "MinSize":"1",
        "MaxSize":"2",
        "DesiredCapacity": "1",
        "HealthCheckType" : "ELB",
        "HealthCheckGracePeriod": 300,
        "LoadBalancerNames" : [ { "Ref": "BlottrLoadBalancer" }],
        "Tags":[
          {
            "Key":"Stage",
            "Value":{
              "Ref":"Stage"
            },
            "PropagateAtLaunch":"true"
          },
          {
            "Key": "Stack",
            "Value": "flexible",
            "PropagateAtLaunch": "true"
          },
          {
            "Key":"App",
            "Value":"blottr",
            "PropagateAtLaunch":"true"
          }
        ]
      }
    },

    "BlottrLaunchConfig":{
      "Type":"AWS::AutoScaling::LaunchConfiguration",
      "Properties":{
        "KeyName":{ "Ref":"KeyName" },
        "ImageId":{ "Ref":"MachineImagesAMI" },
        "SecurityGroups": [
          { "Ref": "AppServerSecurityGroup" },
          { "Ref": "SSHSecurityGroup" }
        ],
        "InstanceType": "t2.micro",
        "IamInstanceProfile": {"Ref": "BlottrInstanceProfile"},
        "UserData":{
          "Fn::Base64":{
            "Fn::Join":["", [
              "#!/bin/bash -ev\n",
              "/opt/features/native-packager/install.sh -b composer-dist -t tgz -s\n"
            ]]
          }
        }
      }
    }
  }
}
